<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/edge_padding"
        android:paddingEnd="@dimen/edge_padding"
        android:orientation="vertical">
    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/textView"
            style="@style/name_style"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nickname_edit" style="@style/name_style" android:textAlignment="center"
            android:hint="@string/what_is_your_nickname"/>
    <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/nickname_text"
            style="@style/name_style"
            android:visibility="gone"/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_gravity="center_horizontal"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image"
            android:layout_marginTop="@dimen/layout_margin"
            android:contentDescription="@string/yellow_star"/>
    <ScrollView
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/bio"
                android:lineSpacingMultiplier="@dimen/lineSpaceMultiplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/name_style"
                android:id="@+id/textView2"
                />
    </ScrollView>
</LinearLayout>